--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,32 @@
 
 @string{aps = {American Physical Society,}}
 
+% in general, want author, title, booktitle/journal, year, pdf, preview
+@inproceedings{chen:2025:cs1-redesign:asee,
+  author= "Yuxuan Chen and Chenyan Zhao and Kangyu Feng and Mattox Alan Beckman and Mariana Silva",
+  title ="A Complete Redesign of CS1 for Engineering Students",
+  booktitle = "2025 ASEE Annual Conference \& Exposition ",
+  year = "2025",
+  month = "June",
+  address = "Montreal, Quebec, Canada ",
+  publisher = "ASEE Conferences",
+  note = {https://peer.asee.org/55349},
+  number = {10.18260/1-2--55349},
+  pdf={Chen2025cs1-redesign.pdf},
+  preview={Chen2025cs1-redesign.png},
+}
+
+@inproceedings{august2020writing,
+  title={Writing Strategies for Science Communication: Data and Computational Analysis},
+  author={August, Tal and Kim, Lauren and Reinecke, Katharina and Smith, Noah A},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  year={2020},
+  pdf={august2020writing.pdf},
+  preview={august2020writing.png},
+  keywords = {peer-review},
+  selected={true}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
