--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-% in general, want author, title, booktitle/journal, year, pdf, preview
+% in general, want author, title, booktitle/journal, year, pdf, preview, selected tf
 @inproceedings{chen:2025:cs1-redesign:asee,
   author= "Yuxuan Chen and Chenyan Zhao and Kangyu Feng and Mattox Alan Beckman and Mariana Silva",
   title ="A Complete Redesign of CS1 for Engineering Students",
@@ -14,128 +14,41 @@
   publisher = "ASEE Conferences",
   note = {https://peer.asee.org/55349},
   number = {10.18260/1-2--55349},
-  pdf={Chen2025cs1-redesign.pdf},
-  preview={Chen2025cs1-redesign.png},
+  pdf={Chen2025-cs1-redesign.pdf},
+  preview={Chen2025-cs1-redesign.jpg},
 }
 
-@inproceedings{august2020writing,
-  title={Writing Strategies for Science Communication: Data and Computational Analysis},
-  author={August, Tal and Kim, Lauren and Reinecke, Katharina and Smith, Noah A},
-  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
-  year={2020},
-  pdf={august2020writing.pdf},
-  preview={august2020writing.png},
-  keywords = {peer-review},
-  selected={true}
+@inproceedings{zhao:2025:structured-roles:asee,
+  author = "Chenyan Zhao and Yuxuan Chen and Kangyu Feng and Geoffrey L Herman and Matthew West and Mariana Silva",
+  title = "Implementing a Tool for Structured Roles in Hybrid Collaborative Learning Environments",
+  booktitle = "2025 ASEE Annual Conference \& Exposition ",
+  year = "2025",
+  month = "June",
+  address = "Montreal, Quebec, Canada ",
+  publisher = "ASEE Conferences",
+  note = {https://peer.asee.org/56751},
+  number = {10.18260/1-2--56751},
+  pdf={Zhao2025-structured-roles.pdf},
+  preview={Zhao2025-structured-roles.jpg},
 }
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+
+@inproceedings{Hassan:2025:teaching-ct-llm:sigcse,
+  author = {Hassan, Mohammed and Chen, Yuxuan and Denny, Paul and Zilles, Craig},
+  title = {On Teaching Novices Computational Thinking by Utilizing Large Language Models Within Assessments},
+  year = {2025},
+  isbn = {9798400705311},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3641554.3701906},
+  doi = {10.1145/3641554.3701906},
+  booktitle = {Proceedings of the 56th ACM Technical Symposium on Computer Science Education V. 1},
+  pages = {471–477},
+  numpages = {7},
+  keywords = {code comprehension, debuggers, execution, large language models},
+  location = {Pittsburgh, PA, USA},
+  series = {SIGCSETS 2025},
+  pdf={Hassan2025-llm-ct.pdf},
+  preview={Hassan2025-llm-ct.jpg},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
