--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,17 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
-% in general, want author, title, booktitle/journal, year, pdf, preview, selected tf
+% in general, want author, title, booktitle/journal, year, location, doi, pdf, preview, selected tf
 @inproceedings{chen:2025:cs1-redesign:asee,
   author= "Yuxuan Chen and Chenyan Zhao and Kangyu Feng and Mattox Alan Beckman and Mariana Silva",
   title ="A Complete Redesign of CS1 for Engineering Students",
   booktitle = "2025 ASEE Annual Conference \& Exposition ",
   year = "2025",
-  month = "June",
-  address = "Montreal, Quebec, Canada ",
-  publisher = "ASEE Conferences",
-  note = {https://peer.asee.org/55349},
-  number = {10.18260/1-2--55349},
+  location={Montreal, Quebec, Canada},
+  doi={10.18260/1-2--55349},
   pdf={Chen2025-cs1-redesign.pdf},
   preview={Chen2025-cs1-redesign.jpg},
 }
@@ -23,32 +20,31 @@
   title = "Implementing a Tool for Structured Roles in Hybrid Collaborative Learning Environments",
   booktitle = "2025 ASEE Annual Conference \& Exposition ",
   year = "2025",
-  month = "June",
-  address = "Montreal, Quebec, Canada ",
-  publisher = "ASEE Conferences",
-  note = {https://peer.asee.org/56751},
-  number = {10.18260/1-2--56751},
+  location={Montreal, Quebec, Canada},
+  doi={10.18260/1-2--56751},
   pdf={Zhao2025-structured-roles.pdf},
   preview={Zhao2025-structured-roles.jpg},
 }
-
 
 @inproceedings{Hassan:2025:teaching-ct-llm:sigcse,
   author = {Hassan, Mohammed and Chen, Yuxuan and Denny, Paul and Zilles, Craig},
   title = {On Teaching Novices Computational Thinking by Utilizing Large Language Models Within Assessments},
   year = {2025},
-  isbn = {9798400705311},
-  publisher = {Association for Computing Machinery},
-  address = {New York, NY, USA},
-  url = {https://doi.org/10.1145/3641554.3701906},
+  location = {Pittsburgh, PA, USA},
   doi = {10.1145/3641554.3701906},
   booktitle = {Proceedings of the 56th ACM Technical Symposium on Computer Science Education V. 1},
-  pages = {471–477},
-  numpages = {7},
-  keywords = {code comprehension, debuggers, execution, large language models},
-  location = {Pittsburgh, PA, USA},
-  series = {SIGCSETS 2025},
-  pdf={Hassan2025-llm-ct.pdf},
-  preview={Hassan2025-llm-ct.jpg},
+  pdf={Hassan2025-ct-llm.pdf},
+  preview={Hassan2025-ct-llm.jpg},
+}
+
+@inproceedings{Zilles:2024:bayesian-grading:sigcse,
+  author = {Zilles, Craig and Zhao, Chenyan and Chen, Yuxuan and Matthews, Evan Michael and West, Matthew},
+  title = {A Case for Bayesian Grading},
+  booktitle = {Proceedings of the 2024 on ACM Virtual Global Computing Education Conference V. 1},
+  year = {2024},
+  doi = {10.1145/3649165.3703624},
+  location = {Virtual Event, NC, USA},
+  pdf={Zilles2024-bayesian-grading.pdf},
+  preview={Zilles2024-bayesian-grading.jpg},
 }
 
